--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <section class="main-info-wraper">
-            <nav id="nav-Menu" class="navigation">
+            <nav id="nav-Menu" class="navigation mobile">
                 <ul class="navigation-list">
                     <li><a href="#">О предприятии</a></li>
                     <li><a href="#">Руководство. Контакты</a></li>
